test/fixtures/configs/projects/remove/fail/error.js
module.exports = {
  url: '/users/2/projects/3',
  method: 'delete',
  headers: {
    authorization: 'token userToken2'
  }
};
